--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="to">
         <p>To</p>
         <div class="select-box">
-          <img src="https://flagcdn.com/48x36/in.png" alt="flag">
+          <img src="https://flagcdn.com/40x30/fr.png" alt="flag">
           <select>
             <!-- Options tag are inserted from JavaScript -->
           </select>
