--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="wrapper">
-  <header>Covert Your Currency</header>
+  <header>Convert Your Currency</header>
   <form action="#">
     <div class="amount">
       <p>Enter Amount</p>
